--- a/app/ecommercefront/package.json
+++ b/app/ecommercefront/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "maska": "^2.1.5",
+    "moment": "^2.29.4",
     "npm": "^9.6.3",
     "stream": "^0.0.2",
     "stream-browserify": "^3.0.0",
